<resources>
    <string name="app_name">BRite</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome Admin</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Apparel</string>
    <string name="menu_gallery">Textiles</string>
    <string name="menu_of">Order</string>
    <string name="menu_slideshow">Customers</string>
    <string name="menu_product">Products</string>
    <string name="menu_tools">Logout</string>
    <string name="title_shirtlist_main">Apparel Orders</string>
    <string name="title_createcus_main">Create Customer</string>
    <string name="title_cusdata_main">Customer Data</string>
    <string name="title_cus_list">Customers</string>
    <string name="title_dhoti_list">Textiles Orders</string>
    <string name="title_product_list">Products</string>
    <string name="title_orderform_list">OrderForm List</string>
    <string name="title_shirt_order">Apparel Orders</string>
    <string name="title_dhoti_order">Textiles Orders</string>
    <string name="title_orderform_order">Orderform Orders</string>
    <string name="title_product">Product Data</string>

    <string name="search_hint">Type and Search</string>


</resources>
